--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 
 <body>
     <div class="container">
+        <header class="header">
+            <div class="row">
+                <img src="img/lambda-black.png" alt="Lambda logo" class="logo">
+                <nav class="navbar">
+                    <a href="#" class="navbar__link">Home</a>
+                    <a href="about.html" class="navbar__link">About</a>
+                    <a href="#" class="navbar__link">Products</a>
+                    <a href="#" class="navbar__link">Blog</a>
+                    <a href="#" class="navbar__link">Contact</a>
+                </nav>
+            </div>
+            <img src="img/jumbo.jpg" alt="Long exposure photo of a freeway" class="full-width-img">
+        </header>
    
         <section class="top-content">
             <div class="text-container">
