--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box teal">Box 1</div>
+                <div class="box gold">Box 2</div>
+                <div class="box cadetblue">Box 3</div>
+                <div class="box coral">Box 4</div>
+                <div class="box crimson">Box 5</div>
+                <div class="box forestgreen">Box 6</div>
+                <div class="box darkorchid">Box 7</div>
+                <div class="box hotpink">Box 8</div>
+                <div class="box indigo">Box 9</div>
+                <div class="box dodgerblue">Box 10</div>
             </div>
         
         </section>
