added header, updated header image in about.html | linked back to index.html

--- a/about.html
+++ b/about.html
@@ -13,6 +13,20 @@
 
 <body>
     <div class="container about-page">
+        <header class="header">
+            <div class="row">
+                <img src="img/lambda-black.png" alt="Lambda logo" class="logo">
+                <nav class="navbar">
+                    <a href="index.html" class="navbar__link">Home</a>
+                    <a href="about.html" class="navbar__link">About</a>
+                    <a href="#" class="navbar__link">Products</a>
+                    <a href="#" class="navbar__link">Blog</a>
+                    <a href="#" class="navbar__link">Contact</a>
+                </nav>
+            </div>
+            <img src="img/jumbo-about.png" alt="Photo of a cityscape" class="full-width-img">
+        </header>
+
      
     About
 
