added the 'about' and 'let's work together' sections of about.html

--- a/about.html
+++ b/about.html
@@ -13,22 +13,49 @@
 
 <body>
     <div class="container about-page">
-        <header class="header">
-            <div class="row">
-                <img src="img/lambda-black.png" alt="Lambda logo" class="logo">
-                <nav class="navbar">
-                    <a href="index.html" class="navbar__link">Home</a>
-                    <a href="about.html" class="navbar__link">About</a>
-                    <a href="#" class="navbar__link">Products</a>
-                    <a href="#" class="navbar__link">Blog</a>
-                    <a href="#" class="navbar__link">Contact</a>
-                </nav>
-            </div>
-            <img src="img/jumbo-about.png" alt="Photo of a cityscape" class="full-width-img">
-        </header>
+      <header class="header">
+          <div class="row">
+              <img src="img/lambda-black.png" alt="Lambda logo" class="logo">
+              <nav class="navbar">
+                  <a href="index.html" class="navbar__link">Home</a>
+                  <a href="about.html" class="navbar__link">About</a>
+                  <a href="#" class="navbar__link">Products</a>
+                  <a href="#" class="navbar__link">Blog</a>
+                  <a href="#" class="navbar__link">Contact</a>
+              </nav>
+          </div>
+          <img src="img/jumbo-about.png" alt="Photo of a cityscape" class="spacer">
+      </header>
+      <section class="full-width divider">
+        <h2 class="full-width__title">About</h2>
+        <div class="full-width__text">
+          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
+          approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition. Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </div>
+      </section>
+      <section class="full-width">
+        <h2 class="full-width__title">Let's Work Together</h2>
+        <div class="full-width__text">
+          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
+          approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition. Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.  
+        </div>
+      </section>
+      <footer>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="#">About</a>
+          <a href="#">Products</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </footer>
 
      
-    About
+    <!-- About
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
@@ -72,16 +99,7 @@
     Let's Work Together
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-        
-      <footer>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="#">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-        </nav>
-      </footer>
+ -->
     </div><!-- container -->        
 </body>
 </html>
