--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#" class="navbar__link">Contact</a>
                 </nav>
             </div>
-            <img src="img/jumbo.jpg" alt="Long exposure photo of a freeway" class="full-width-img">
+            <img src="img/jumbo.jpg" alt="Long exposure photo of a freeway" class="spacer">
         </header>
    
         <section class="top-content">
