added main content to about.html

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container about-page">
-      <header class="header">
+      <header>
           <div class="row">
               <img src="img/lambda-black.png" alt="Lambda logo" class="logo">
               <nav class="navbar">
@@ -26,24 +26,66 @@
           </div>
           <img src="img/jumbo-about.png" alt="Photo of a cityscape" class="spacer">
       </header>
-      <section class="full-width divider">
-        <h2 class="full-width__title">About</h2>
-        <div class="full-width__text">
-          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
-          approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition. Organically grow the holistic world view of disruptive innovation via
-          workplace diversity and empowerment.
+      <main>
+        <section class="full-width divider">
+          <h2 class="full-width__title">About</h2>
+          <div class="full-width__text">
+            Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
+            approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition. Organically grow the holistic world view of disruptive innovation via
+            workplace diversity and empowerment.
+          </div>
+        </section>
+        <div class="row-cards">
+          <section class="card">
+            <img src="img/about-plan.png" alt="Picture of a flowchart" class="card__img">
+            <h2 class="card__title">Strategy</h2>
+            <div class="card__text">
+              Iterative approaches to corporate strategy foster collaborative thinking to
+              further the overall value proposition.
+            </div>
+            <div class="btn">Learn More</div>
+          </section>
+          <section class="card">
+            <img src="img/about-working.png" alt="One of our developers hard at work" class="card__img">
+            <h2 class="card__title">How We Work</h2>
+            <div class="card__text">
+              Iterative approaches to corporate strategy foster collaborative thinking to
+              further the overall value proposition.
+            </div>
+            <div class="btn">Learn More</div>
+          </section>
         </div>
-      </section>
-      <section class="full-width">
-        <h2 class="full-width__title">Let's Work Together</h2>
-        <div class="full-width__text">
-          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
-          approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition. Organically grow the holistic world view of disruptive innovation via
-          workplace diversity and empowerment.  
+        <div class="row-cards">
+          <section class="card">
+            <img src="img/about-office.png" alt="A picture of our office" class="card__img">
+            <h2 class="card__title">Place We Work</h2>
+            <div class="card__text">
+              Iterative approaches to corporate strategy foster collaborative thinking to
+              further the overall value proposition.
+            </div>
+            <div class="btn">Learn More</div>
+          </section>
+          <section class="card">
+            <img src="img/about-meeting.png" alt="Several of our developers hard at work" class="card__img">
+            <h2 class="card__title">Collaboration</h2>
+            <div class="card__text">
+              Iterative approaches to corporate strategy foster collaborative thinking to
+              further the overall value proposition.
+            </div>
+            <div class="btn">Learn More</div>
+          </section>
         </div>
-      </section>
+        <section class="full-width">
+          <h2 class="full-width__title">Let's Work Together</h2>
+          <div class="full-width__text">
+            Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative 
+            approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition. Organically grow the holistic world view of disruptive innovation via
+            workplace diversity and empowerment.  
+          </div>
+        </section>
+      </main>
       <footer>
         <nav>
           <a href="index.html">Home</a>
