--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                   <a href="about.html" class="navbar__link">About</a>
                   <a href="#" class="navbar__link">Products</a>
                   <a href="#" class="navbar__link">Blog</a>
-                  <a href="#" class="navbar__link">Contact</a>
+                  <a href="contact.html" class="navbar__link">Contact</a>
               </nav>
           </div>
           <img src="img/jumbo-about.png" alt="Photo of a cityscape" class="spacer">
